# OrCaNN

./: .gitignore  README.md  config.yaml  example.md  pyproject.toml  run.sh
data/pre_processed/: motion_corrected_movies_mc_tif.txt
data/raw/: raw_recordings_nd2_tif_npy.txt
docs/: README.md  inference_pipeline.md
eddie/jobs/: check_gpu_mig.sh  infer_array.sh  train_spatial.sh  train_temporal_loio.sh
hpc/: README_HPC.md  config.sh  make_workspace.sh  setup.sh  setup_hpc.sh  submit.sh
hpc/jobs/: activity.sh  analysis.sh  check_gpu.sh  check_gpu_mig.sh  detect_transients.sh  infer.sh  infer_array.sh  motion_correct.sh  motion_correct_array.sh  run_pipeline.sh  seg_infer.sh  segment.sh  train_seg.sh  train_spatial.sh  train_temporal.sh  train_temporal_loio.sh
logs/: sge_job_logs.txt
models/seg_final/: trained_segmenter_pt.txt
orcann/: DOCUMENTATION.md  README.md  annotations.py  extract.py  io.py  motion_correction.py  pyproject.toml  spatial_log.py  spatial_scatter.py  spatial_seg.py  temporal_dog.py  train_loio.py  train_spatial.py
orcann/eddie/: README_EDDIE.md  config.sh  make_workspace.sh  setup_eddie.sh
orcann/eddie/jobs/: check_gpu.sh
orcann/orcann/: DOCUMENTATION.md  extract.py  figures.py  spatial_log.py  train_loio.py  train_spatial.py
orcann/scripts/: check_annotation.py  run_train_spatial.py  visualize_transients.py
results/activity/: activity_output_dff_spikes_footprints_gallery.txt
results/analysis/: analysis_output_group_figures_and_tables.txt
results/infer/: infer_output_probability_maps.txt
results/spatial/: segment_output_labels_centroids_traces.txt
results/spatial_eval/: spatial_training_eval_report_json.txt
scripts/: check_annotation.py  measure_cell_sizes.py  run_infer.py  run_motion_correct.py  run_seg_infer.py  run_train_seg.py  run_train_spatial.py  run_train_temporal_loio.py  run_transients.py  visualize_transients.py
src/orcann/: configLoader.py
src/orcann/activity/: __init__.py  (+5 more)
(+46 files in other folders)
